--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Slide">
   <title>Slide</title>
+
+  <link rel="preload" href="./style/index.css" as="style">
+  <link rel="stylesheet" href="./style/index.css">
 </head>
+
 <body>
-  
+
 </body>
+<script type="module" src="./src/index.js"></script>
+
 </html>
