--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
   <link rel="stylesheet" href="./style/index.css">
 </head>
 
-<body>
-
+<body class="slide-container">
+  <ul class="slide">
+    <li><img src="./img/image2.jpg" alt=""></li>
+    <li><img src="./img/image2.jpg" alt=""></li>
+    <li><img src="./img/image3.jpg" alt=""></li>
+    <li><img src="./img/image4.jpg" alt=""></li>
+    <li><img src="./img/image5.jpg" alt=""></li>
+    <li><img src="./img/image6.jpg" alt=""></li>
+  </ul>
 </body>
 <script type="module" src="./src/index.js"></script>
 
