create class Slide and methods

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
   <link rel="stylesheet" href="./style/index.css">
 </head>
 
-<body class="slide-container">
-  <ul class="slide">
-    <li><img src="./img/image2.jpg" alt=""></li>
-    <li><img src="./img/image2.jpg" alt=""></li>
-    <li><img src="./img/image3.jpg" alt=""></li>
-    <li><img src="./img/image4.jpg" alt=""></li>
-    <li><img src="./img/image5.jpg" alt=""></li>
-    <li><img src="./img/image6.jpg" alt=""></li>
-  </ul>
+<body>
+  <div class="slide-container">
+    <ul class="slide">
+      <li><img src="./img/image2.jpg" alt=""></li>
+      <li><img src="./img/image2.jpg" alt=""></li>
+      <li><img src="./img/image3.jpg" alt=""></li>
+      <li><img src="./img/image4.jpg" alt=""></li>
+      <li><img src="./img/image5.jpg" alt=""></li>
+      <li><img src="./img/image6.jpg" alt=""></li>
+    </ul>
+  </div>
 </body>
 <script type="module" src="./src/index.js"></script>
 
