--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <li><img src="./img/image6.jpg" alt=""></li>
     </ul>
   </div>
+  <div class="arrow-nav">
+    <button class="prev">prev</buttom>
+    <button class="next">next</buttom>
+  </div>
 </body>
 <script type="module" src="./src/index.js"></script>
 
