add custom buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
 </head>
 
 <body>
+  <ul class="custom-controls">
+    <li><img src="./img/image1.jpg" alt=""></li>
+    <li><img src="./img/image2.jpg" alt=""></li>
+    <li><img src="./img/image3.jpg" alt=""></li>
+    <li><img src="./img/image4.jpg" alt=""></li>
+    <li><img src="./img/image5.jpg" alt=""></li>
+    <li><img src="./img/image6.jpg" alt=""></li>
+  </ul>
+
   <div class="slide-container">
     <ul class="slide">
-      <li><img src="./img/image2.jpg" alt=""></li>
+      <li><img src="./img/image1.jpg" alt=""></li>
       <li><img src="./img/image2.jpg" alt=""></li>
       <li><img src="./img/image3.jpg" alt=""></li>
       <li><img src="./img/image4.jpg" alt=""></li>
@@ -23,8 +32,8 @@
     </ul>
   </div>
   <div class="arrow-nav">
-    <button class="prev">prev</buttom>
-    <button class="next">next</buttom>
+    <button class="prev"></buttom>
+      <button class="next"></buttom>
   </div>
 </body>
 <script type="module" src="./src/index.js"></script>
