correction error name file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Slide">
   <title>Slide</title>
 
-  <link rel="preload" href="./style/index.css" as="style">
-  <link rel="stylesheet" href="./style/index.css">
+  <link rel="preload" href="./style/slide.css" as="style">
+  <link rel="stylesheet" href="./style/slide.css">
 </head>
 
 <body>
